<resources>
    <string name="app_name" translatable="false">Genshin Wiki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile" translatable="false">profile</string>
    <string name="stars" translatable="false">stars</string>
    <string name="ChunLi" translatable="false">Чжун Ли</string>
    <string name="element" translatable="false">element</string>
    <string name="weapon" translatable="false">weapon</string>
    <string name="filter" translatable="false">filter</string>
    <string name="first_fragment_label" translatable="false">character fragment</string>
    <string name="empty" translatable="false" />
    <string name="Homa" translatable="false">Staff of Homa</string>
    <string name="lee_yue" translatable="false">Lee Yue</string>
    <string name="weapons_fragment" translatable="false">weapons fragment</string>
    <string name="pitch" translatable="false">pitch</string>
    <string name="value_example" translatable="false">153</string>
    <string name="emblem" translatable="false">Эмблема рассечённой судьбы</string>
    <string name="resource" translatable="false">resource</string>
    <string name="resource_label_example" translatable="false">Forgotten Canyon, Mondstadt</string>
    <string name="birthday_example" translatable="false">12 Апреля</string>
    <string name="description_example" translatable="false">Лучший дед геншина</string>
    <string name="normal_attack_example" translatable="false">Каменный дождь</string>
    <string name="elemental_burst_example" translatable="false">Падение кометы</string>
    <string name="elemental_skill_example" translatable="false">Власть над камнем</string>
    <string name="piece_bonus_2_example" translatable="false">ATK +18%.</string>
    <string name="piece_bonus_4_example" translatable="false">Increases DMG by 30% against opponents with more than 50% HP.</string>
    <string name="description_example_weapon" translatable="false">In a barren ancient time, when the now-verdant land was still but a wasteland, a maiden, barefoot in the snow, followed the footsteps of the Lord of the Tower.</string>
    <string name="passive_ability_example" translatable="false">The Parting Refrain A part of the \'Millennial Movement\' that wanders amidst the winds.</string>
    <string name="home">Home</string>
    <string name="weapons">Weapons</string>
    <string name="characters">Characters</string>
    <string name="artifacts">Artifacts</string>
    <string name="reset">Reset</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="location">Location:</string>
    <string name="female">Female:</string>
    <string name="male">Male:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="description">Description:</string>
    <string name="ability">Abilities:</string>
    <string name="normal_attack">Normal Attack:</string>
    <string name="elemental_skill">Elemental Skill:</string>
    <string name="elemental_burst">Elemental Burst:</string>
    <string name="clear">Clear</string>
    <string name="more">more</string>
    <string name="bonus">Bonus:</string>
    <string name="piece_bonus_2">2-Piece Bonus</string>
    <string name="piece_bonus_4">4-Piece Bonus</string>
    <string name="type">Type:</string>
    <string name="polearm">Polearm</string>
    <string name="sword">Sword</string>
    <string name="bow">Bow</string>
    <string name="claymor">Claymor</string>
    <string name="catalyst">Catalyst</string>
    <string name="information">Information:</string>
    <string name="stat">Stat:</string>
    <string name="second_stat">2nd Stat:</string>
    <string name="ATK">ATK</string>
    <string name="ATK_PER">ATK %</string>
    <string name="DEF">DEF</string>
    <string name="DEF_PER">DEF %</string>
    <string name="HP">HP</string>
    <string name="HP_PER">HP %</string>
    <string name="ER_PER">Energy Recharge %</string>
    <string name="EM">Elemental Mastery %</string>
    <string name="CRIT_DMG">CRIT DMG %</string>
    <string name="CRIT_RATE">CRIT Rate %</string>
    <string name="HEAL_PER">Healing Bonus %</string>
    <string name="PHYS_DMG">Physical DMG Bonus %</string>
    <string name="PYRO_DMG">Pyro DMG Bonus %</string>
    <string name="DENDRO_DMG">Dendro DMG Bonus %</string>
    <string name="GEO_DMG">Geo DMG Bonus %</string>
    <string name="HYDRO_DMG">Hydro DMG Bonus %</string>
    <string name="ELECTRO_DMG">Electro DMG Bonus %</string>
    <string name="ANEMO_DMG">Anemo DMG Bonus %</string>
    <string name="CRYO_DMG">Cryo DMG Bonus %</string>
    <string name="pyro">Pyro</string>
    <string name="dendro">Dendro</string>
    <string name="geo">Geo</string>
    <string name="hydro">Hydro</string>
    <string name="electro">Electro</string>
    <string name="anemo">Anemo</string>
    <string name="cryo">Cryo</string>
    <string name="passive_ability">Passive ability:</string>
    <string name="no_data">No Data</string>
    <string name="search">Search</string>
    <string name="loader" translatable="false">loader</string>
    <string name="not_found">Not found</string>
    <string name="available">All resources are available</string>
</resources>