<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.character_portrait.CharacterPortraitFragment">

    <include
        android:id="@+id/appbar"
        layout="@layout/portrait_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="16dp"
            >

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/portrait_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/geo_element"
                app:cardCornerRadius="@dimen/profile_radius"
                app:strokeWidth="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/ChunLi"
                        android:maxHeight="600dp"
                        android:minHeight="500dp"
                        android:padding="8dp"
                        android:src="@drawable/grandpa_portrait"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/second_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:strokeWidth="0dp"
                android:backgroundTint="?attr/colorOnSurfaceVariant"
                app:cardCornerRadius="@dimen/profile_radius">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/character_info_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <include
                            android:id="@+id/character_info"
                            layout="@layout/portrait_info_block"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="32dp"
                        android:id="@+id/location_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/character_info_block">

                        <TextView
                            style="@style/PortraitDescriptionBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location" />

                        <TextView
                            android:id="@+id/location"
                            style="@style/PortraitDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/indentation"
                            android:text="@string/lee_yue" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/gender_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_block_margin"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/location_block">

                        <TextView
                            style="@style/PortraitDescriptionBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender" />

                        <TextView
                            android:id="@+id/gender"
                            style="@style/PortraitDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/indentation"
                            android:text="@string/male" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/birthday_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_block_margin"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gender_block">

                        <TextView
                            style="@style/PortraitDescriptionBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/birthday" />

                        <TextView
                            android:id="@+id/birthday"
                            style="@style/PortraitDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/indentation"
                            android:text="@string/birthday_example" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/description_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_block_margin"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/birthday_block">

                        <TextView
                            style="@style/PortraitDescriptionBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description" />

                        <TextView
                            android:id="@+id/description"
                            style="@style/PortraitDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description_example" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ability_block"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_block_margin"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/description_block">

                        <TextView
                            style="@style/PortraitDescriptionBold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ability" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/ability_margin"
                            android:layout_marginTop="@dimen/text_block_margin"
                            android:orientation="vertical">

                            <TextView
                                style="@style/PortraitDescriptionBold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/normal_attack" />

                            <TextView
                                android:id="@+id/normal_attack"
                                style="@style/PortraitDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/normal_attack_example" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/ability_margin"
                            android:layout_marginTop="@dimen/text_block_margin"
                            android:orientation="vertical">

                            <TextView
                                style="@style/PortraitDescriptionBold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/elemental_skill" />

                            <TextView
                                android:id="@+id/elemental_skill"
                                style="@style/PortraitDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/elemental_skill_example" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/ability_margin"
                            android:layout_marginTop="@dimen/text_block_margin"
                            android:orientation="vertical">

                            <TextView
                                style="@style/PortraitDescriptionBold"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/elemental_burst" />

                            <TextView
                                android:id="@+id/elemental_burst"
                                style="@style/PortraitDescription"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/elemental_burst_example" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>