<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:strokeWidth="0dp"
    app:cardCornerRadius="@dimen/small_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:maxWidth="100dp"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChunLi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"
            style="@style/DefaultText"/>

        <ImageView
            android:id="@+id/stars"
            android:layout_width="@dimen/stars_image_width"
            android:layout_height="@dimen/starts_image_height"
            android:contentDescription="@string/stars"
            android:paddingTop="6dp"
            android:src="@drawable/five_stars"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stars">

            <ImageView
                android:id="@+id/element"
                android:layout_width="@dimen/info_block_image_size"
                android:layout_height="@dimen/info_block_image_size"
                android:contentDescription="@string/element"
                android:src="@drawable/element" />

            <ImageView
                android:id="@+id/weapon_type"
                android:layout_width="@dimen/info_block_image_size"
                android:layout_height="@dimen/info_block_image_size"
                android:layout_marginStart="4dp"
                android:contentDescription="@string/weapon"
                android:src="@drawable/weapon" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>