<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="18dp"
    app:cardCornerRadius="@dimen/profile_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:padding="@dimen/liked_padding">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/character_block"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            app:cardCornerRadius="@dimen/profile_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/character"
                android:layout_width="@dimen/liked_size"
                android:layout_height="@dimen/liked_size"
                android:contentDescription="@string/profile"
                android:maxHeight="@dimen/liked_size"
                android:src="@drawable/profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/character_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/liked_info_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/character_block"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="100dp"
                android:text="@string/ChunLi"
                android:textAlignment="center"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stars" />

            <ImageView
                android:id="@+id/stars"
                android:layout_width="@dimen/stars_image_width"
                android:layout_height="@dimen/starts_image_height"
                android:layout_gravity="center"
                android:contentDescription="@string/stars"
                android:paddingTop="6dp"
                android:src="@drawable/five_stars"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_block" />
        </LinearLayout>

        <ImageView
            android:id="@+id/element"
            android:layout_width="@dimen/small_image_size"
            android:layout_height="@dimen/small_image_size"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/element"
            android:src="@drawable/element"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/character_info"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/weapon_type"
            android:layout_width="@dimen/small_image_size"
            android:layout_height="@dimen/small_image_size"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/weapon"
            android:src="@drawable/weapon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/element"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/more"
            android:src="@drawable/points"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>