<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/portrait_block"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/stars_5">

    <LinearLayout
        android:id="@+id/image_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/portrait_image_padding">

        <ImageView
            android:id="@+id/image"
            android:layout_width="@dimen/image_size"
            android:layout_height="@dimen/image_size"
            android:layout_gravity="center"
            android:contentDescription="@string/profile"
            android:src="@drawable/artifact" />
    </LinearLayout>

    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_block"
        tools:ignore="UseCompoundDrawables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <ImageView
            android:id="@+id/stars"
            android:layout_width="@dimen/stars_image_width"
            android:layout_height="@dimen/starts_image_height"
            android:contentDescription="@string/stars"
            android:paddingTop="6dp"
            android:src="@drawable/five_stars" />

        <TextView
            android:id="@+id/name"
            style="@style/PortraitTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:text="@string/emblem" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>